// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Save and Discard buttons but not translation dialog when new dashboard (no dashboard id) 1`] = `
<div>
  <div
    class="editBar"
    data-test="edit-control-bar"
  >
    <div
      class="controls"
    >
      <div
        class="jsx-71743532 start"
        data-test="dhis2-uicore-buttonstrip"
      >
        <div
          class="jsx-71743532 box"
        >
          <button
            class="jsx-2371629422 primary"
            data-test="save-dashboard-button"
            type="button"
          >
            Save changes
          </button>
        </div>
        <div
          class="jsx-71743532 box"
        >
          <button
            class="jsx-2371629422 "
            data-test="dhis2-uicore-button"
            type="button"
          >
            Print preview
          </button>
        </div>
        <div
          class="jsx-71743532 box"
        >
          <button
            class="jsx-2371629422 "
            data-test="dhis2-uicore-button"
            type="button"
          >
            Filter settings
          </button>
        </div>
        <div
          class="jsx-71743532 box"
        />
        <div
          class="jsx-71743532 box"
        />
        <div
          class="jsx-71743532 box"
        >
          <button
            class="jsx-2371629422 "
            data-test="dhis2-uicore-button"
            type="button"
          >
            Auto layout
          </button>
        </div>
      </div>
      <button
        class="jsx-2371629422 secondary"
        data-test="dhis2-uicore-button"
        type="button"
      >
        Exit without saving
      </button>
    </div>
  </div>
  <div
    class="mock-filter-settings-dialog"
  />
  
  
</div>
`;

exports[`renders Translate, Delete, and Discard buttons when delete access 1`] = `
<div>
  <div
    class="editBar"
    data-test="edit-control-bar"
  >
    <div
      class="controls"
    >
      <div
        class="jsx-71743532 start"
        data-test="dhis2-uicore-buttonstrip"
      >
        <div
          class="jsx-71743532 box"
        >
          <button
            class="jsx-2371629422 primary"
            data-test="save-dashboard-button"
            type="button"
          >
            Save changes
          </button>
        </div>
        <div
          class="jsx-71743532 box"
        >
          <button
            class="jsx-2371629422 "
            data-test="dhis2-uicore-button"
            type="button"
          >
            Print preview
          </button>
        </div>
        <div
          class="jsx-71743532 box"
        >
          <button
            class="jsx-2371629422 "
            data-test="dhis2-uicore-button"
            type="button"
          >
            Filter settings
          </button>
        </div>
        <div
          class="jsx-71743532 box"
        >
          <button
            class="jsx-2371629422 "
            data-test="dhis2-uicore-button"
            type="button"
          >
            Translate
          </button>
        </div>
        <div
          class="jsx-71743532 box"
        >
          <button
            class="jsx-2371629422 "
            data-test="delete-dashboard-button"
            type="button"
          >
            Delete
          </button>
        </div>
        <div
          class="jsx-71743532 box"
        >
          <button
            class="jsx-2371629422 "
            data-test="dhis2-uicore-button"
            type="button"
          >
            Auto layout
          </button>
        </div>
      </div>
      <button
        class="jsx-2371629422 secondary"
        data-test="dhis2-uicore-button"
        type="button"
      >
        Exit without saving
      </button>
    </div>
  </div>
  <div
    class="mock-filter-settings-dialog"
  />
  <div
    class="mock-translation-dialog"
  />
</div>
`;

exports[`renders only the Go to Dashboards button when no update access 1`] = `
<div>
  <div
    class="editBar"
    data-test="edit-control-bar"
  >
    <div
      class="controls"
    >
      <button
        class="jsx-2371629422 secondary"
        data-test="dhis2-uicore-button"
        type="button"
      >
        Go to dashboards
      </button>
    </div>
  </div>
</div>
`;

exports[`renders the ActionsBar without Delete when no delete access 1`] = `
<div>
  <div
    class="editBar"
    data-test="edit-control-bar"
  >
    <div
      class="controls"
    >
      <div
        class="jsx-71743532 start"
        data-test="dhis2-uicore-buttonstrip"
      >
        <div
          class="jsx-71743532 box"
        >
          <button
            class="jsx-2371629422 primary"
            data-test="save-dashboard-button"
            type="button"
          >
            Save changes
          </button>
        </div>
        <div
          class="jsx-71743532 box"
        >
          <button
            class="jsx-2371629422 "
            data-test="dhis2-uicore-button"
            type="button"
          >
            Print preview
          </button>
        </div>
        <div
          class="jsx-71743532 box"
        >
          <button
            class="jsx-2371629422 "
            data-test="dhis2-uicore-button"
            type="button"
          >
            Filter settings
          </button>
        </div>
        <div
          class="jsx-71743532 box"
        >
          <button
            class="jsx-2371629422 "
            data-test="dhis2-uicore-button"
            type="button"
          >
            Translate
          </button>
        </div>
        <div
          class="jsx-71743532 box"
        />
        <div
          class="jsx-71743532 box"
        >
          <button
            class="jsx-2371629422 "
            data-test="dhis2-uicore-button"
            type="button"
          >
            Auto layout
          </button>
        </div>
      </div>
      <button
        class="jsx-2371629422 secondary"
        data-test="dhis2-uicore-button"
        type="button"
      >
        Exit without saving
      </button>
    </div>
  </div>
  <div
    class="mock-filter-settings-dialog"
  />
  <div
    class="mock-translation-dialog"
  />
</div>
`;
